cabal-version: 2.2

name:                cardano-crypto-praos
version:             2.0.0
synopsis:            Crypto primitives from libsodium
description:         VRF (and KES, tba) primitives from libsodium.
license:             Apache-2.0
license-files:
  LICENSE
  NOTICE
author:              IOHK
maintainer:          operations@iohk.io
copyright:           2019-2021 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  README.md

extra-source-files:    cbits/vrf09/crypto_vrf.h
                       cbits/vrf09/crypto_vrf_ietfdraft09.h
                       cbits/vrf09/vrf_ietfdraft09.h

                       cbits/vrf09/private/common.h
                       cbits/vrf09/private/ed25519_ref10_fe_25_5.h
                       cbits/vrf09/private/ed25519_ref10_fe_51.h
                       cbits/vrf09/private/ed25519_ref10.h
                       cbits/vrf09/private/fe_25_5/base2.h
                       cbits/vrf09/private/fe_25_5/base.h
                       cbits/vrf09/private/fe_25_5/constants.h
                       cbits/vrf09/private/fe_25_5/fe.h
                       cbits/vrf09/private/fe_51/base2.h
                       cbits/vrf09/private/fe_51/base.h
                       cbits/vrf09/private/fe_51/constants.h
                       cbits/vrf09/private/fe_51/fe.h
                       cbits/vrf09/private/quirks.h
                       cbits/vrf09/private/vrf_ietfdraft03.h

                       cbits/vrf03/crypto_vrf.h
                       cbits/vrf03/crypto_vrf_ietfdraft03.h
                       cbits/vrf03/vrf_ietfdraft03.h

                       cbits/vrf03/private/common.h
                       cbits/vrf03/private/ed25519_ref10_fe_25_5.h
                       cbits/vrf03/private/ed25519_ref10_fe_51.h
                       cbits/vrf03/private/ed25519_ref10.h
                       cbits/vrf03/private/fe_25_5/base2.h
                       cbits/vrf03/private/fe_25_5/base.h
                       cbits/vrf03/private/fe_25_5/constants.h
                       cbits/vrf03/private/fe_25_5/fe.h
                       cbits/vrf03/private/fe_51/base2.h
                       cbits/vrf03/private/fe_51/base.h
                       cbits/vrf03/private/fe_51/constants.h
                       cbits/vrf03/private/fe_51/fe.h
                       cbits/vrf03/private/quirks.h

flag development
    description: Disable `-Werror`
    default: False
    manual: True

flag external-libsodium-vrf
    description: Rely on a special libsodium fork containing the VRF code.
                 Otherwise expect a normal unaltered system libsodium, and
                 bundle the VRF code.
    default: True
    manual: True

common base                         { build-depends: base                             >= 4.14       && < 4.15     }

common project-config
  default-language:     Haskell2010

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

  if (!flag(development))
    ghc-options:        -Werror

library
  import:               base, project-config
  hs-source-dirs:       src
  exposed-modules:      Cardano.Crypto.VRF.Praos
                 ,      Cardano.Crypto.VRF.Praos09

  build-depends:        base
                      , bytestring
                      , cardano-binary
                      , cardano-crypto-class
                      , cardano-prelude
                      , nothunks

  pkgconfig-depends: libsodium

  if !flag(external-libsodium-vrf)
    c-sources:          cbits/vrf09/convert.c
                        cbits/vrf09/private/ed25519_ref10.c
                        cbits/vrf09/verify.c
                        cbits/vrf09/keypair.c
                        cbits/vrf09/prove.c
                        cbits/vrf09/crypto_vrf.c
                        cbits/vrf09/vrf.c
                        cbits/vrf03/convert.c
                        cbits/vrf03/private/ed25519_ref10.c
                        cbits/vrf03/verify.c
                        cbits/vrf03/keypair.c
                        cbits/vrf03/prove.c
                        cbits/vrf03/crypto_vrf.c
                        cbits/vrf03/vrf.c
