cabal-version: 3.0
name: cardano-crypto-praos
version: 2.2.2.0
synopsis: Crypto primitives from libsodium
description: VRF (and KES, tba) primitives from libsodium.
license: Apache-2.0
license-files:
  LICENSE
  NOTICE

author: IOHK
maintainer: operations@iohk.io
copyright: 2019-2021 IOHK
category: Currency
build-type: Simple
extra-doc-files:
  CHANGELOG.md
  README.md

extra-source-files:
  cbits/crypto_vrf.h
  cbits/private/common.h
  cbits/private/core_h2c.h
  cbits/private/ed25519_ref10.h
  cbits/private/ed25519_ref10_fe_25_5.h
  cbits/private/ed25519_ref10_fe_51.h
  cbits/private/fe_25_5/base.h
  cbits/private/fe_25_5/base2.h
  cbits/private/fe_25_5/constants.h
  cbits/private/fe_25_5/fe.h
  cbits/private/fe_51/base.h
  cbits/private/fe_51/base2.h
  cbits/private/fe_51/constants.h
  cbits/private/fe_51/fe.h
  cbits/vrf03/crypto_vrf_ietfdraft03.h
  cbits/vrf13_batchcompat/crypto_vrf_ietfdraft13.h

data-files:
  test_vectors/vrf_ver03_generated_1
  test_vectors/vrf_ver03_generated_2
  test_vectors/vrf_ver03_generated_3
  test_vectors/vrf_ver03_generated_4
  test_vectors/vrf_ver03_standard_10
  test_vectors/vrf_ver03_standard_11
  test_vectors/vrf_ver03_standard_12
  test_vectors/vrf_ver13_generated_1
  test_vectors/vrf_ver13_generated_2
  test_vectors/vrf_ver13_generated_3
  test_vectors/vrf_ver13_generated_4
  test_vectors/vrf_ver13_standard_10
  test_vectors/vrf_ver13_standard_11
  test_vectors/vrf_ver13_standard_12

flag external-libsodium-vrf
  description:
    Rely on a special libsodium fork containing the VRF code.
    Otherwise expect a normal unaltered system libsodium, and
    bundle the VRF code.

  default: True
  manual: True

common base
  build-depends: base >=4.18 && <5

common project-config
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages

library
  import: base, project-config
  hs-source-dirs: src
  exposed-modules:
    Cardano.Crypto.RandomBytes
    Cardano.Crypto.VRF.Praos
    Cardano.Crypto.VRF.PraosBatchCompat

  build-depends:
    base,
    bytestring,
    cardano-binary,
    cardano-crypto-class >=2.2.4,
    deepseq,
    nothunks,

  pkgconfig-depends: libsodium

  if !flag(external-libsodium-vrf)
    c-sources:
      cbits/crypto_vrf.c
      cbits/private/core_h2c.c
      cbits/private/ed25519_ref10.c
      cbits/vrf03/prove.c
      cbits/vrf03/verify.c
      cbits/vrf03/vrf.c
      cbits/vrf13_batchcompat/prove.c
      cbits/vrf13_batchcompat/verify.c
      cbits/vrf13_batchcompat/vrf.c

library testlib
  import: base, project-config
  hs-source-dirs: testlib
  visibility: public
  exposed-modules: Test.Crypto.VRF
  other-modules: Paths_cardano_crypto_praos
  autogen-modules: Paths_cardano_crypto_praos
  build-depends:
    HUnit,
    QuickCheck,
    base,
    bytestring >=0.10.12.0,
    cardano-crypto-class:{cardano-crypto-class, testlib},
    cardano-crypto-praos,
    hspec,

test-suite tests
  import: base, project-config
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  other-modules: Paths_cardano_crypto_praos
  autogen-modules: Paths_cardano_crypto_praos
  main-is: Main.hs
  build-depends:
    base,
    cardano-crypto-class,
    cardano-crypto-praos:testlib,
    hspec,

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

benchmark bench
  import: base, project-config
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is: Main.hs
  other-modules:
    Bench.Crypto.VRF

  build-depends:
    base,
    bytestring,
    cardano-crypto-class:{cardano-crypto-class, benchlib},
    cardano-crypto-praos,
    criterion,
    deepseq,

  ghc-options: -threaded
