cabal-version: 2.2

name:                cardano-crypto-tests
version:             2.0.0
synopsis:            Tests for cardano-crypto-class and -praos
description:         Tests for cardano-crypto-class and -praos
license:             Apache-2.0
license-files:
  LICENSE
  NOTICE
author:              IOHK
maintainer:          operations@iohk.io
copyright:           2020-2021 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  README.md

flag development
    description: Disable `-Werror`
    default: False
    manual: True

common base                         { build-depends: base                             >= 4.14       && < 4.15     }

common project-config
  default-language:     Haskell2010

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

  if (!flag(development))
    ghc-options:        -Werror

library
  import:               base, project-config
  hs-source-dirs:       src

  exposed-modules:      Test.Crypto.DSIGN
                        Test.Crypto.Hash
                        Test.Crypto.RunIO
                        Test.Crypto.KES
                        Test.Crypto.Util
                        Test.Crypto.VRF
                        Test.Crypto.Instances
                        Bench.Crypto.VRF
                        Bench.Crypto.KES

  build-depends:        base
                      , bytestring
                      , cardano-binary
                      , cardano-crypto-class
                      , cardano-crypto-praos
                      , cardano-prelude
                      , cborg
                      , containers
                      , cryptonite
                      , formatting
                      , mtl
                      , nothunks
                      , QuickCheck
                      , quickcheck-instances
                      , tasty
                      , tasty-quickcheck
                      , criterion
                      , tasty-hunit
                      , HUnit

test-suite test-crypto
  import:               base, project-config
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Main.hs
  build-depends:        base
                      , cardano-crypto-class
                      , cardano-crypto-tests
                      , tasty

  ghc-options:          -threaded

benchmark bench-crypto
  import:               base, project-config
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       bench
  main-is:              Main.hs
  build-depends:        base
                      , cardano-crypto-class
                      , cardano-crypto-tests
                      , criterion

  ghc-options:          -threaded
