cabal-version: 2.2

name:                cardano-crypto-tests
version:             2.0.0.1
synopsis:            Tests for cardano-crypto-class and -praos
description:         Tests for cardano-crypto-class and -praos
license:             Apache-2.0
license-files:
  LICENSE
  NOTICE
author:              IOHK
maintainer:          operations@iohk.io
copyright:           2020-2021 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  README.md

flag development
    description: Disable `-Werror`
    default: False
    manual: True

flag secp256k1-support
    description: Enable support for functions from libsecp256k1. Requires
                 a recent libsecp256k1 with support for Schnorr signatures.
    default: True
    manual: True

-- We currently use some operations on mlocked primitives that allow secrets
-- stored in mlocked memory to escape to the Haskell heap, which defeats the
-- purpose of mlocking. Currently, the test suite depends on such primitives,
-- and cardano-node uses sign key serialization which also depends on them, so
-- we need those unsafe primitives around. Dependants that do not need them,
-- though, can turn them off by clearing this flag.
flag allow-mlock-violations
    description: Enable unsafe but useful operations on mlocked primitives
    -- enable this flag for now
    default:     False
    manual:      True


common base                         { build-depends: base >= 4.14 && < 4.17 }

common project-config
  default-language:     Haskell2010

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

  if (!flag(development))
    ghc-options:        -Werror

library
  import:               base, project-config
  hs-source-dirs:       src

  exposed-modules:      Test.Crypto.DSIGN
                        Test.Crypto.Hash
                        Test.Crypto.RunIO
                        Test.Crypto.KES
                        Test.Crypto.Util
                        Test.Crypto.VRF
                        Test.Crypto.Regressions
                        Test.Crypto.Instances
                        Bench.Crypto.DSIGN
                        Bench.Crypto.VRF
                        Bench.Crypto.KES
                        Bench.Crypto.BenchData
                        Test.Crypto.Vector.Secp256k1DSIGN
                        Test.Crypto.Vector.Vectors
                        Test.Crypto.Vector.StringConstants
                        Test.Crypto.Vector.SerializationUtils

  build-depends:        base
                      , bytestring >=0.10.12.0
                      , cardano-binary
                      , cardano-crypto-class
                      , cardano-crypto-praos
                      , cardano-prelude
                      , cborg
                      , containers
                      , cryptonite
                      , deepseq
                      , formatting
                      , mtl
                      , nothunks
                      , pretty-show
                      , QuickCheck
                      , quickcheck-instances
                      , tasty
                      , tasty-hunit
                      , tasty-quickcheck
                      , criterion
                      , base16-bytestring
                      , tasty-hunit
                      , HUnit

  if flag(secp256k1-support)
    cpp-options: -DSECP256K1_ENABLED

  if flag(allow-mlock-violations)
    cpp-options: -DALLOW_MLOCK_VIOLATIONS

test-suite test-crypto
  import:               base, project-config
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Main.hs
  build-depends:        base
                      , cardano-crypto-class
                      , cardano-crypto-tests
                      , tasty
                      , tasty-quickcheck

  ghc-options:          -threaded -rtsopts -with-rtsopts=-N

benchmark bench-crypto
  import:               base, project-config
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       bench
  main-is:              Main.hs
  build-depends:        base
                      , cardano-crypto-class
                      , cardano-crypto-tests
                      , criterion

  ghc-options:          -threaded
