cabal-version: 2.2

name:                cardano-crypto-tests
version:             2.2.0.0
synopsis:            Tests for cardano-crypto-class and -praos
description:         Tests for cardano-crypto-class and -praos
license:             Apache-2.0
license-files:
  LICENSE
  NOTICE
author:              IOHK
maintainer:          operations@iohk.io
copyright:           2020-2021 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

flag secp256k1-support
    description: Enable support for functions from libsecp256k1. Requires
                 a recent libsecp256k1 with support for Schnorr signatures.
    default: True
    manual: True

common base                         { build-depends: base >= 4.14 && < 4.19 }

common project-config
  default-language:     Haskell2010

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

library
  import:               base, project-config
  hs-source-dirs:       src

  exposed-modules:      Test.Crypto.DSIGN
                        Test.Crypto.EllipticCurve
                        Test.Crypto.Hash
                        Test.Crypto.RunIO
                        Test.Crypto.KES
                        Test.Crypto.Util
                        Test.Crypto.AllocLog
                        Test.Crypto.VRF
                        Test.Crypto.Regressions
                        Test.Crypto.Instances
                        Cardano.Crypto.KES.ForgetMock
                        Bench.Crypto.DSIGN
                        Bench.Crypto.VRF
                        Bench.Crypto.KES
                        Bench.Crypto.HASH
                        Bench.Crypto.BenchData
                        Test.Crypto.Vector.SerializationUtils

  build-depends:        base
                      , bytestring >=0.10.12.0
                      , cardano-binary
                      , cardano-crypto-class >= 2.2
                      , cardano-crypto-praos
                      , cborg
                      , containers
                      , cryptonite
                      , contra-tracer ==0.1.0.1
                      , deepseq
                      , formatting
                      , io-classes
                      , mtl
                      , nothunks
                      , pretty-show
                      , random
                      , QuickCheck
                      , quickcheck-instances
                      , tasty
                      , tasty-hunit
                      , tasty-quickcheck
                      , tasty-hunit
                      , criterion
                      , base16-bytestring
                      , tasty-hunit

  if flag(secp256k1-support)
    cpp-options: -DSECP256K1_ENABLED
    exposed-modules: Test.Crypto.Vector.Secp256k1DSIGN
                     Test.Crypto.Vector.StringConstants
                     Test.Crypto.Vector.Vectors

test-suite test-crypto
  import:               base, project-config
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Main.hs
  build-depends:        base
                      , cardano-crypto-class
                      , cardano-crypto-tests
                      , tasty
                      , tasty-quickcheck

  if flag(secp256k1-support)
    cpp-options: -DSECP256K1_ENABLED

  ghc-options:          -threaded -rtsopts -with-rtsopts=-N

benchmark bench-crypto
  import:               base, project-config
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       bench
  main-is:              Main.hs
  build-depends:        base
                      , cardano-crypto-class
                      , cardano-crypto-tests
                      , criterion

  ghc-options:          -threaded
