name:                cardano-mempool
version:             0.1.0.0
synopsis:            Short description
description:         Lock-free threadsafe pinned memory pool
homepage:            https://github.com/input-output-hk/cardano-base
license:             BSD3
author:              IOHK
maintainer:          operations@iohk.io
copyright:           2022 IOHK
category:            Memory
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
cabal-version:       1.18
tested-with:         GHC == 8.10.7
                   , GHC == 9.2.4

library
  hs-source-dirs:      src
  exposed-modules:     Cardano.Memory.Pool

  other-modules:
  build-depends:       base >= 4.8 && < 5
                     , primitive
                     , pvar

  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints

test-suite tests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     tests
  main-is:            Main.hs
  other-modules:      Common
                    , Test.Cardano.Memory.PoolTests
  build-depends:      base
                    , async
                    , cardano-mempool
                    , primitive
                    , pvar
                    , random
                    , tasty
                    , tasty-quickcheck
                    , tasty-hunit
                    , QuickCheck

  default-language:   Haskell2010
  ghc-options:        -Wall
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
                      -fno-warn-orphans
                      -threaded
                      -with-rtsopts=-N

benchmark bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Bench.hs
  ghc-options:         -Wall
                       -threaded
                       -O2
                       -with-rtsopts=-N
  build-depends:       base
                     , cardano-mempool
                     , criterion
                     , deepseq
                     , unliftio
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/input-output-hk/cardano-base
  subdir:   cardano-mempool
