cabal-version: 3.0
name: cardano-strict-containers
version: 0.1.6.0
synopsis: Various strict container types
license: Apache-2.0
license-files:
  LICENSE
  NOTICE

extra-doc-files: CHANGELOG.md
author: IOHK
maintainer: operations@iohk.io
copyright: IOHK
build-type: Simple

common language
  default-language: Haskell2010

common warnings
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages

library
  import: language, warnings
  hs-source-dirs: src
  exposed-modules:
    Data.FingerTree.Strict
    Data.Maybe.Strict
    Data.Sequence.Strict
    Data.Unit.Strict

  build-depends:
    aeson,
    base,
    cardano-binary >=1.6,
    containers,
    data-default-class,
    deepseq,
    fingertree,
    nothunks,
    serialise,

library testlib
  import: language, warnings
  visibility: public
  hs-source-dirs: testlib
  exposed-modules:
    Test.Cardano.StrictContainers.Instances

  build-depends:
    QuickCheck,
    base,
    cardano-strict-containers,
