cabal-version:       >=1.10

name:                heapwords
version:             0.1.0.0
synopsis:            Heapwords
license:             Apache-2.0
license-files:
  LICENSE
  NOTICE
author:              IOHK
maintainer:          operations@iohk.io
copyright:           IOHK
build-type:          Simple

flag development
    description: Disable `-Werror`
    default: False
    manual: True

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Wunused-packages

  if (!flag(development))
    ghc-options:
      -Werror
  exposed-modules:      Cardano.HeapWords
  build-depends:        array
                      , base >= 4.14
                      , bytestring
                      , containers
                      , ghc-prim
                      , integer-gmp
                      , text
                      , time
                      , vector
