cabal-version: 3.0
name: measures
version: 0.1.0.3
synopsis: An abstraction for (tuples of) measured quantities
license: Apache-2.0
license-files:
  LICENSE
  NOTICE

author: IOHK
maintainer: operations@iohk.io
copyright: IOHK
build-type: Simple
extra-doc-files: CHANGELOG.md

common base
  build-depends: base >=4.18 && <5

common project-config
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages

library
  import: base, project-config
  hs-source-dirs: src
  exposed-modules:
    Data.Measure
    Data.Measure.Class

  build-depends:
    base-deriving-via

test-suite tests
  import: base, project-config
  hs-source-dirs: test
  main-is: Main.hs
  type: exitcode-stdio-1.0
  other-modules:
    Test.Data.Measure

  build-depends:
    QuickCheck,
    hspec,
    measures,
