name:                cardano-binary-test
version:             1.3.0
synopsis:            Test helpers from cardano-binary exposed to other packages
description:         Test helpers from cardano-binary exposed to other packages
license:             MIT
license-file:        LICENSE
author:              IOHK
maintainer:          operations@iohk.io
copyright:           2019 IOHK
category:            Currency
build-type:          Simple
cabal-version:       >=1.10

flag development
    description: Disable `-Werror`
    default: False
    manual: True

library
  exposed-modules:
                       Test.Cardano.Binary.Helpers
                       Test.Cardano.Binary.Helpers.GoldenRoundTrip
                       Test.Cardano.Binary.Helpers.CanonicalTestable
                       Test.Cardano.Binary.Serialization
                       Test.Cardano.Binary.Drop
                       Test.Cardano.Binary.Failure

  build-depends:       base
                     , bytestring
                     , cardano-binary
                     , cardano-prelude
                     , cardano-prelude-test
                     , cborg
                     , containers
                     , formatting
                     , hedgehog
                     , hspec
                     , pretty-show
                     , QuickCheck
                     , quickcheck-instances
                     , text
                     , vector

  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude

  ghc-options:         -Weverything
                       -fno-warn-all-missed-specialisations
                       -fno-warn-missing-import-lists
                       -fno-warn-safe
                       -fno-warn-unsafe

  if (!flag(development))
    ghc-options:         -Werror
