[package]
name = "test-vectors-bls12_381"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bls12_381 = { version = "0.8.0", features = ["default", "experimental"] }
rand_core   = "0.6.4"
sha2 = "0.9"
rand_chacha = "0.3.1"
ff = "0.13.0"
group = "0.13.0"
hex = "0.4.3"
